[package]
name = "rayquaza-vm"
version = "0.1.0"
keywords = ["starknet", "cairo"]
description = "A high performance virtual machine for Cairo."

edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
stark-felt = { git = "https://github.com/nils-mathieu/types-rs" }
