[package]
name = "rayquaza-vm"
version = "0.1.0"
keywords = ["starknet", "cairo"]
description = "A high performance virtual machine for Cairo."

publish.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
starknet-types-core = { git = "https://github.com/nils-mathieu/types-rs" }
num-traits = "0.2"
bitflags = "2"